2007-05-07  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/ip.c: corrections from release testing
	* src/drivers/np_ip.c: corrections from release testing
	* src/test/test-np_ip.c: corrections from release testing
	* tests/kernel.at: correction to module test for new distros
	* AUTHORS: updated release files
	* doc/manual/news.texi: updated release files
	* NEWS: updated release files
	* README: updated release files
	* README-cvs: updated release files
	* THANKS: updated release files

2007-05-06  Brian Bidulock  <bidulock@openss7.org>

	* strxns.spec.in: make GPL version more obvious

2007-04-17  Brian Bidulock  <bidulock@openss7.org>

	* tests/testsuite-ip.at: testsuite factoring
	* tests/testsuite-np_ip.at: testsuite factoring
	* tests/testsuite.at: testsuite factoring

2007-04-12  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: corrected typo
	* src/drivers/np_ip.c: adjust packet sizes and water marks

2007-04-02  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/bugs.texi: documented option handling bug fix in ldltest
	* src/test/ldltest.c: option handling bug fix in ldltest

	* doc/manual/bugs.texi: documented bugs fixed in ldl
	* src/drivers/ldl.c: fixed MKDEV bug in ldl and added missing MODULE_ALIAS's

2007-03-30  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man7/npi_ip.7.man: documentation corrections

2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: support for 2.6.20-1.2307.fc5
	* doc/manual/news.texi: support for 2.6.20-1.2307.fc5
	* src/drivers/cd.c: support for 2.6.20-1.2307.fc5
	* src/drivers/dl.c: support for 2.6.20-1.2307.fc5
	* src/drivers/dl2.c: support for 2.6.20-1.2307.fc5
	* src/drivers/dl_ip.c: support for 2.6.20-1.2307.fc5
	* src/drivers/dlp.c: support for 2.6.20-1.2307.fc5
	* src/drivers/hdlc.c: support for 2.6.20-1.2307.fc5
	* src/drivers/ip.c: support for 2.6.20-1.2307.fc5
	* src/drivers/ip_to_dlpi.c: support for 2.6.20-1.2307.fc5
	* src/drivers/ldl.c: support for 2.6.20-1.2307.fc5